--- a/AbbyWoodLabs/JWTs/Dockerfile
+++ b/AbbyWoodLabs/JWTs/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 
 RUN apt-get update && \
     apt-get install -y wget curl unzip gnupg chromium-driver chromium && \
-    pip install flask selenium
-
+    pip install flask selenium pyjwt
+    
 COPY app /app
 COPY bot /bot
 COPY run.sh .
@@ -15,3 +15,4 @@ RUN chmod +x run.sh
 EXPOSE 3000
 
 CMD ["sh", "run.sh"]
+
